Fix spacing, update PC/XBox colors
The bumper and trigger buttons were still too far away from the face
buttons, moved them left another 7 pixels.

Also updated the PC/XBox colors to go darker to ligher for
bumpers/triggers and made the colors white and medium gray instead of
medium gray and dark gray.

--- a/scss/xbox_6_button.scss
+++ b/scss/xbox_6_button.scss
@@ -1,4 +1,5 @@
 @import "./arcade_button.scss";
+@import "./globals.scss";
 
 .controller.fight-stick {
   background: none;
@@ -16,7 +17,7 @@
   }
 
   .triggers { 
-    right: 20px !important;
+    right: $bumper-trigger-space !important;
     .trigger-button {
       &.left { display: none; }
       &.right { @include arcade-button(#808080); }
@@ -24,7 +25,7 @@
   }
 
   .bumpers {
-    right: 20px !important;
+    right: $bumper-trigger-space !important;
     .bumper {
       &.left { display: none; }
       &.right { @include arcade-button(#808080); }
