--- a/scss/xbox_8_button.scss
+++ b/scss/xbox_8_button.scss
@@ -1,4 +1,5 @@
 @import "./arcade_button.scss";
+@import "./globals.scss";
 
 .controller.fight-stick {
   background: none;
@@ -16,17 +17,17 @@
   }
 
   .triggers { 
-    right: 20px !important;
+    right: $bumper-trigger-space !important;
     .trigger-button {
-      &.left { @include arcade-button(#505050); }
+      &.left { @include arcade-button(#d6d6d6); }
       &.right { @include arcade-button(#808080); }
     }
   }
 
   .bumpers {
-    right: 20px !important;
+    right: $bumper-trigger-space !important;
     .bumper {
-      &.left { @include arcade-button(#505050); }
+      &.left { @include arcade-button(#d6d6d6); }
       &.right { @include arcade-button(#808080); }
     }
   }
